add_executable(origin_sgemm origin_sgemm.cu)
target_link_libraries(origin_sgemm PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(origin_sgemm PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif ()

add_executable(sgemm_tile_vec4 sgemm_tile_vec4.cu)
target_link_libraries(sgemm_tile_vec4 PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemm_tile_vec4 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif ()

add_executable(sgemm_thread_tile_vec4 sgemm_thread_tile_vec4.cu)
target_link_libraries(sgemm_thread_tile_vec4 PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemm_thread_tile_vec4 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif ()

add_executable(sgemm_thread_tile_register sgemm_thread_tile_register.cu)
target_link_libraries(sgemm_thread_tile_register PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemm_thread_tile_register PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif ()

add_executable(sgemm_register_transpose sgemm_register_transpose.cu)
target_link_libraries(sgemm_register_transpose PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemm_register_transpose PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif ()

add_executable(sgemm_double_buffer sgemm_double_buffer.cu)
target_link_libraries(sgemm_double_buffer PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(sgemm_double_buffer PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif ()
